--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.berkeley.zouxuan.tripbuddy.GameActivity"
-    android:background="@drawable/background_blur2">
+    android:background="@drawable/back_blur">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
