--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -1,37 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="16dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:layout_margin="2dp"
+        card_view:cardCornerRadius="2dp"
+        card_view:contentPadding="10dp"
         android:id="@+id/card_view">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
             <ImageView
-                android:layout_width="50px"
-                android:layout_height="50px"
+                android:paddingTop="10dp"
+                android:layout_width="80px"
+                android:layout_height="80px"
                 android:id="@+id/card_view_image"
                 android:src="@drawable/buttonxml"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/card_view_title"
+                android:paddingTop="20dp"
                 android:layout_toRightOf="@id/card_view_image"
                 android:layout_alignParentTop="true"
                 android:text="This is a test title!"
-                android:textSize="30sp" />
+                android:textSize="20dp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/card_view_content"
                 android:layout_toRightOf="@+id/card_view_image"
                 android:text="this is a test content."
-                android:layout_below="@+id/card_view_title"/>
+                android:layout_below="@+id/card_view_title"
+                android:textSize="15dp"/>
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
