--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -10,16 +10,35 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.berkeley.zouxuan.tripbuddy.GameActivity"
     android:background="@drawable/back_blur">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/topLinear">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingLeft="120dp"
+            android:paddingRight="40dp"
+            android:id="@+id/game_title"
+            android:src="@drawable/game"/>
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="100px">
+        android:paddingTop="250px"
+        android:paddingLeft="80px"
+        android:layout_below="@id/topLinear"
+        android:id="@+id/midLinear">
         <ImageButton
             android:layout_width="150px"
             android:layout_height="150px"
             android:layout_marginLeft="30px"
             android:id="@+id/game_category"
-            android:background="@drawable/buttonxml"/>
+            android:background="@drawable/category"/>
         <ImageButton
             android:layout_width="150px"
             android:layout_height="150px"
@@ -27,19 +46,21 @@
             android:layout_marginRight="40px"
             android:layout_gravity="center_horizontal"
             android:id="@+id/game_rhythm"
-            android:background="@drawable/buttonxml"/>
+            android:background="@drawable/rhyme"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="300px">
+        android:paddingTop="20dp"
+        android:paddingLeft="80px"
+        android:layout_below="@id/midLinear">
         <ImageButton
             android:layout_width="150px"
             android:layout_height="150px"
             android:layout_marginLeft="30px"
             android:id="@+id/game_knowledge"
-            android:background="@drawable/buttonxml"/>
+            android:background="@drawable/mc"/>
         <ImageButton
             android:layout_width="150px"
             android:layout_height="150px"
@@ -47,7 +68,7 @@
             android:layout_marginRight="40px"
             android:layout_gravity="center_horizontal"
             android:id="@+id/game_more"
-            android:background="@drawable/buttonxml"/>
+            android:background="@drawable/more"/>
     </LinearLayout>
 
 </RelativeLayout>
