--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -11,7 +11,25 @@
     tools:context="edu.berkeley.zouxuan.tripbuddy.HistoryActivity"
     android:background="@drawable/back_2">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/history_top">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingLeft="100dp"
+            android:paddingRight="40dp"
+            android:id="@+id/game_title"
+            android:src="@drawable/history_title"/>
+    </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
+        android:layout_below="@id/history_top"
+        android:paddingTop="20dp"
         android:id="@+id/recycle_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
