--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -53,7 +53,8 @@
         android:paddingRight="50dp"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
-        android:onClick="controlTimer" />
+        />
+        <!--android:onClick="controlTimer" />-->
 
     <ImageView
         android:layout_width="500dp"
