--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,54 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/back_blur"
 
+    android:background="@drawable/back_blur"
+    android:fitsSystemWindows="true" tools:openDrawer="start"
     tools:context="edu.berkeley.zouxuan.tripbuddy.MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <include layout="@layout/app_bar_main" android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="60dp"
-            android:paddingLeft="40dp"
-            android:paddingRight="40dp"
-            android:id="@+id/titleview"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="600px">
-        <ImageButton
-            android:layout_width="150px"
-            android:layout_height="150px"
-            android:layout_marginLeft="30px"
-            android:id="@+id/game_button"
-            android:background="@drawable/gamemode"/>
-        <ImageButton
-            android:layout_width="150px"
-            android:layout_height="150px"
-            android:layout_marginLeft="20px"
-            android:layout_marginRight="20px"
-            android:layout_gravity="center_horizontal"
-            android:id="@+id/alarm_button"
-            android:background="@drawable/alarmmode"/>
-        <ImageButton
-            android:layout_width="157px"
-            android:layout_height="157px"
-            android:layout_marginRight="30px"
-            android:id="@+id/history_button"
-            android:background="@drawable/history"/>
-    </LinearLayout>
-
-</RelativeLayout>
+    <android.support.design.widget.NavigationView android:id="@+id/nav_view"
+        android:layout_width="wrap_content" android:layout_height="match_parent"
+        android:layout_gravity="start" android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_main" app:menu="@menu/activity_main_drawer" />
+</android.support.v4.widget.DrawerLayout>
