--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -3,15 +3,17 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
+    android:paddingTop="5dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        android:layout_margin="2dp"
-        card_view:cardCornerRadius="2dp"
-        card_view:contentPadding="10dp"
+        android:layout_margin="1dp"
+        card_view:cardCornerRadius="1dp"
+        card_view:contentPadding="1dp"
         android:id="@+id/card_view">
 
         <RelativeLayout
