--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/titlelay">
 
         <ImageView
             android:id="@+id/titleview"
@@ -14,14 +15,14 @@
             android:layout_height="wrap_content"
             android:paddingLeft="40dp"
             android:paddingRight="40dp"
-            android:paddingTop="60dp" />
+            android:paddingTop="80dp" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycle_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/history_top"
+        android:layout_below="@id/titlelay"
         android:paddingTop="20dp"
         android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>
 
