--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -22,7 +22,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Comp. Sci. Tutorials"
+        android:text="Xuan Zou"
         android:textSize="14sp"
         android:textColor="#FFF"
         android:textStyle="bold"
@@ -36,7 +36,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="user@host.com"
+        android:text="zouxuan@berkeley.edu"
         android:id="@+id/email"
         android:gravity="left"
         android:layout_marginBottom="8dp"
