--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@android:color/white"
     android:padding="@dimen/activity_horizontal_margin">
 
     <LinearLayout
@@ -38,9 +39,9 @@
             android:id="@+id/btn_chat_send"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.3"
-            android:background="#d3d3d3"
+            android:layout_weight="0.2"
+            android:background="@android:color/holo_blue_dark"
             android:text="Send"
-            android:textColor="@color/background_floating_material_dark" />
+            android:textColor="@android:color/white"/>
     </LinearLayout>
 </LinearLayout>
