--- a/app/src/main/res/layout/layout_input.xml
+++ b/app/src/main/res/layout/layout_input.xml
@@ -16,7 +16,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.3"
-        android:background="@color/background_floating_material_dark"
+        android:background="@android:color/holo_blue_dark"
         android:text="Send"
         android:textColor="@color/background_material_light" />
 </LinearLayout>
