--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    android:background="@drawable/back_blur"
+
     android:fitsSystemWindows="true" tools:openDrawer="start"
     tools:context="edu.berkeley.zouxuan.tripbuddy.MainActivity">
-
+    <!--android:background="@drawable/back_blur"-->
     <include layout="@layout/app_bar_main" android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -17,4 +17,6 @@
         android:layout_width="wrap_content" android:layout_height="match_parent"
         android:layout_gravity="start" android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main" app:menu="@menu/activity_main_drawer" />
+
+
 </android.support.v4.widget.DrawerLayout>
