--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     tools:context="edu.berkeley.zouxuan.tripbuddy.GameFragment">
 
     <LinearLayout
@@ -9,10 +10,12 @@
         android:id="@+id/topLinear">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="100dp"
-            android:paddingTop="60dp"
+            android:layout_width="500dp"
+            android:layout_height="150dp"
+            android:paddingLeft="110dp"
+            android:paddingTop="100dp"
+            android:layout_gravity="center"
+
 
             android:id="@+id/game_title"
             android:src="@drawable/game"/>
@@ -21,46 +24,49 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="250px"
-        android:paddingLeft="80px"
-        android:layout_below="@id/topLinear"
-        android:id="@+id/midLinear">
+        android:paddingTop="20dp"
+        android:paddingLeft="20px"
+        android:layout_below="@id/midLinear">
         <ImageButton
-            android:layout_width="150px"
-            android:layout_height="150px"
-            android:layout_marginLeft="30px"
-            android:id="@+id/game_category"
-            android:background="@drawable/category"/>
+            android:layout_width="250px"
+            android:layout_height="60px"
+            android:layout_marginLeft="10px"
+            android:id="@+id/game_knowledge"
+            android:background="@drawable/mc"/>
         <ImageButton
-            android:layout_width="150px"
-            android:layout_height="150px"
-            android:layout_marginLeft="40px"
+            android:layout_width="250px"
+            android:layout_height="60px"
+            android:layout_marginLeft="10px"
             android:layout_marginRight="40px"
             android:layout_gravity="center_horizontal"
-            android:id="@+id/game_rhythm"
-            android:background="@drawable/rhyme"/>
+            android:id="@+id/game_more"
+            android:background="@drawable/more"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        android:paddingLeft="80px"
-        android:layout_below="@id/midLinear">
+        android:paddingTop="250px"
+        android:paddingLeft="20px"
+        android:id="@+id/midLinear"
+        android:layout_below="@+id/topLinear"
+        android:layout_alignParentStart="true">
+
         <ImageButton
-            android:layout_width="150px"
-            android:layout_height="150px"
-            android:layout_marginLeft="30px"
-            android:id="@+id/game_knowledge"
-            android:background="@drawable/mc"/>
+            android:layout_width="250px"
+            android:layout_height="60px"
+            android:layout_marginLeft="10px"
+            android:id="@+id/game_category"
+            android:background="@drawable/category"/>
+
         <ImageButton
-            android:layout_width="150px"
-            android:layout_height="150px"
-            android:layout_marginLeft="40px"
+            android:layout_width="250px"
+            android:layout_height="60px"
+            android:layout_marginLeft="10px"
             android:layout_marginRight="40px"
             android:layout_gravity="center_horizontal"
-            android:id="@+id/game_more"
-            android:background="@drawable/more"/>
+            android:id="@+id/game_rhythm"
+            android:background="@drawable/rhyme"/>
     </LinearLayout>
 
 </RelativeLayout>
