--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -26,5 +26,11 @@
         android:paddingTop="20dp"
         android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>
 
+    <com.github.zagum.speechrecognitionview.RecognitionProgressView
+        android:id="@+id/recognition_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="800dp"
+        android:layout_gravity="center|bottom"/>
 
 </RelativeLayout>
