--- a/app/src/main/res/layout/item_chat_right.xml
+++ b/app/src/main/res/layout/item_chat_right.xml
@@ -8,15 +8,16 @@
         android:layout_alignParentRight="true"
         android:background="@drawable/bubble_right"
         android:orientation="vertical"
-        android:paddingBottom="10dp">
+        android:paddingBottom="15dp">
 
         <TextView
             android:id="@+id/txt_msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxWidth="300dp"
-            android:padding="5dp"
-            android:textColor="@android:color/holo_green_dark" />
+            android:padding="2dp"
+            android:textSize="20dp"
+            android:textColor="@android:color/black" />
 
     </LinearLayout>
 
