--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -11,11 +11,13 @@
 
         <ImageView
             android:id="@+id/titleview"
-            android:layout_width="wrap_content"
+            android:layout_width="185dp"
             android:layout_height="wrap_content"
-            android:paddingLeft="40dp"
-            android:paddingRight="40dp"
-            android:paddingTop="80dp" />
+            android:src="@drawable/history"
+
+
+            android:paddingLeft="10dp"
+            android:paddingTop="68dp" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
