--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -9,7 +9,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="1dp"
         card_view:cardCornerRadius="1dp"
@@ -20,20 +20,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <ImageView
-                android:paddingTop="10dp"
-                android:layout_width="80px"
-                android:layout_height="80px"
+                android:paddingTop="13dp"
+                android:layout_width="90px"
+                android:layout_height="90px"
+                android:paddingBottom="13dp"
                 android:id="@+id/card_view_image"
                 android:src="@drawable/buttonxml"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/card_view_title"
-                android:paddingTop="20dp"
+                android:paddingTop="18dp"
                 android:layout_toRightOf="@id/card_view_image"
                 android:layout_alignParentTop="true"
                 android:text="This is a test title!"
-                android:textSize="20dp" />
+                android:textSize="22dp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -41,7 +42,7 @@
                 android:layout_toRightOf="@+id/card_view_image"
                 android:text="this is a test content."
                 android:layout_below="@+id/card_view_title"
-                android:textSize="15dp"/>
+                android:textSize="17dp"/>
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
